RESOLVED FIXED254829
UIKit controls sometimes do not receive tap events
https://bugs.webkit.org/show_bug.cgi?id=254829
Summary UIKit controls sometimes do not receive tap events
Richard Robinson
Reported 2023-03-31 10:26:23 PDT
Attachments
Richard Robinson
Comment 1 2023-03-31 10:32:53 PDT
EWS
Comment 2 2023-04-03 14:56:15 PDT
Committed 262530@main (d5ff4276a812): <https://commits.webkit.org/262530@main> Reviewed commits have been landed. Closing PR #12245 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.