UIKit controls sometimes do not receive tap events https://bugs.webkit.org/show_bug.cgi?id=254829 rdar://107398700

Reviewed by Wenson Hsieh.

Generalizes the `-[WKContentView _handleTapOverInteractiveControl:]` function to make sure
valid controls receive the proper tap events.

Also removes an outdated comment.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _singleTapIdentified:]):
(-[WKContentView _singleTapRecognized:]):
(-[WKContentView _handleTapOverInteractiveControl:]):
(-[WKContentView _handleTapOverImageAnalysisInteractionButton:]): Deleted.

Canonical link: https://commits.webkit.org/262530@main